# narratemed

./: .env.example  .gitignore  README.md  install.bat  install.ps1  install.sh  main.py  pyproject.toml  start.sh  structure.py  transcribe.py
frontend/: index.html
