[project]
name = "narraterad"
version = "0.1.0"
description = "Radiology voice dictation and report structuring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "fastapi>=0.136.1",
    "groq>=0.11.0",
    "httpx>=0.28.1",
    "mlx-whisper>=0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy>=2.4.4",
    "python-multipart>=0.0.27",
    "sounddevice>=0.5.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
